Fix non-centered logo alignment in Agency template

--- a/templates/themes/templates/themes/agency/assets/css/layout.css
+++ b/templates/themes/templates/themes/agency/assets/css/layout.css
@@ -230,6 +230,7 @@
 	}
 
 	header .logo-container {
+		text-align: left;
 		margin-top: 30px;
 	}
 
